# packages-intel

./: .gitignore  ARCHITECTURE.md  docker-compose.yml
backend/: .dockerignore  .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  utils.py
backend/app/api/routes/: auth.py  chat.py  graph.py  history.py  scan.py
backend/app/core/: config.py  security.py
backend/app/db/: mongodb.py  neo4j.py
backend/app/models/: message.py  scan.py  user.py
backend/app/schemas/: auth.py  chat.py  scan.py
backend/app/services/: aura_agent.py  graph_loader.py  risk.py
backend/app/services/fetchers/: depsdev.py  github.py  registries.py
backend/app/services/parsers/: __init__.py  go.py  java.py  npm.py  php.py  python.py  ruby.py  rust.py
backend/scripts/seed/: 01_fetch_top_packages.py  02_fetch_deps.py  03_fetch_github.py  04_load_graph.py
frontend/: .env.example  Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(app)/dashboard/: page.tsx
frontend/app/(app)/scan/[id]/: page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/(marketing)/: page.tsx
frontend/components/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/components/dashboard/: ScanHistory.tsx  UploadZone.tsx
frontend/components/landing/: Hero.tsx  ProblemSection.tsx  SupportedFormats.tsx
frontend/components/scan/: ChatPanel.tsx  GraphCanvas.tsx  RiskBarChart.tsx  RiskDonut.tsx  RiskTable.tsx  ScanPageClient.tsx  ScanPending.tsx  ScatterPlot.tsx  SummaryCards.tsx
frontend/components/shared/: Navbar.tsx  RiskBadge.tsx
frontend/components/ui/: button.tsx  card.tsx  input.tsx
frontend/hooks/: useAuth.ts  useScan.ts
frontend/lib/: api.ts  auth.ts
frontend/types/: chat.ts  scan.ts  user.ts
